baml_language/crates/baml_tests/snapshots/diagnostic_errors/instanceof_removed/baml_tests__diagnostic_errors__instanceof_removed__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Cat {
  name: string
}
class user.Dog {
  breed: string
}
function user.check_instanceof(x: user.Cat | user.Dog) -> bool  [expr] {
  {  } <missing>
}
function user.check_instanceof_in_if(x: user.Cat | user.Dog) -> string  [expr] {
  { if (<missing>) { return "dog" } } "cat"
}
function user.from_json(j: baml.json.json) -> user.Cat  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Dog  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
