baml_language/crates/baml_tests/snapshots/diagnostic_errors/instanceof_removed/baml_tests__diagnostic_errors__instanceof_removed__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 48017
---
=== PPIR ===
class user.Cat {
  name: string
}
class user.Cat$stream {
  name: string | null
}
class user.Dog {
  breed: string
}
class user.Dog$stream {
  breed: string | null
}
function user.check_instanceof(x: user.Cat | user.Dog) -> bool  [expr] {
  {  } <missing>
}
function user.check_instanceof_in_if(x: user.Cat | user.Dog) -> string  [expr] {
  { if (<missing>) { return "dog" } } "cat"
}
