baml_language/crates/baml_tests/snapshots/diagnostic_errors/instanceof_removed/baml_tests__diagnostic_errors__instanceof_removed__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [hir] Error: `instanceof` is no longer supported. Use a `match` expression for type checking instead.
    ╭─[ instanceof_removed.baml:13:7 ]
    │
 13 │     x instanceof Cat
    │       ─────┬────  
    │            ╰────── use `match` instead
    │ 
    │ Note: Error code: E0098
────╯

  [hir] Error: `instanceof` is no longer supported. Use a `match` expression for type checking instead.
    ╭─[ instanceof_removed.baml:17:11 ]
    │
 17 │     if (x instanceof Dog) {
    │           ─────┬────  
    │                ╰────── use `match` instead
    │ 
    │ Note: Error code: E0098
────╯
